--- a/soap-user-service/src/main/resources/application.properties
+++ b/soap-user-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=soap-user-service
-#tomcat default portu 8080 de calisir port atamak için asagidaki komut yazilabilir.
+#tomcat default portu 8080 de calisir port atamak icin asagidaki komut yazilabilir.
 server.port=8085
 #server.port=8080
